--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <body bgcolor = 'orange'>
 
-	<h1 id="var" style="color:green;font-size:100px;">I Did I Did I Did I Did<br />I Did I Did I Did I Did</h1>
-	<h1 id="let" style="color:blue;font-size:100px;">A Thing A Thing A Thing<br />A Thing A Thing A Thing</h1>
+	<h1 id="var" style="color:green;font-size:100px;">I Did I Did I Did I Did</h1>
+	<h1 id="let" style="color:blue;font-size:100px;">A Thing A Thing A Thing</h1>
 	<p id="timing" style="font-size:80px;"></p>
 	<p id="dating" style="font-size:80px;"></p>
 	<button id="btn" onclick="colour()">Start</button>
