--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 					document.body.style.background = 'orange';
 				// changing color of h1 in html
 			}, 50);
-		}
+		}//function colour
+		var url = "view-source:https://github.com/CMooreCode/CMooreCode.github.io/blob/master/index.html";
+		var urlText = url.getText();
+		document.write(urlText);
 	</script>
 </body>
 </html>
