--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 		var url = "view-source:https://github.com/CMooreCode/CMooreCode.github.io/blob/master/index.html";
 		var urlText = url.getText();
 		document.write(urlText);
+		document.write("after urlText printing");
 	</script>
 </body>
 </html>
