--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<style>
+		#git {
+			position: absolute;
+			border: 1px solid red;
+			top: 70px;
+			right: 10px;
+		}
+	</style>
 	<title>Tester</title>
 </head>
 
 <body bgcolor = 'orange'>
-
+	<h6 id="git">Text that will be replaced with time stamps</h6> 
 	<h1 id="var" style="color:green;font-size:100px;">I Did I Did I Did I Did</h1>
 	<h1 id="let" style="color:blue;font-size:100px;">A Thing A Thing A Thing</h1>
 	<p id="timing" style="font-size:80px;"></p>
