--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body bgcolor = 'orange'>
-	<h4 id="git">Text that will be replaced with time stamps</h4> 
+	<h3 id="git">Text that will be replaced with time stamps</h3> 
 	<h1 id="var" style="color:green;font-size:100px;">I Did I Did I Did I Did</h1>
 	<h1 id="let" style="color:blue;font-size:100px;">A Thing A Thing A Thing</h1>
 	<p id="timing" style="font-size:80px;"></p>
@@ -23,17 +23,17 @@
 
 	<script type="text/javascript">
 
-		var now  = new Date();
+		var now  = new Date(); //init date
 		var today = (now.getMonth()+1) + "-" + now.getDate() + "-" + now.getFullYear();
 		var time = now.toLocaleTimeString();
 		dating.innerText = today;
 		timing.innerText = time;
-		setInterval(function() {
+		setInterval(function() { //check new date every minute
 			var now  = new Date();
 			var today = (now.getMonth()+1) + "-" + now.getDate() + "-" + now.getFullYear();
 			dating.innerText = today;
 		}, 60000);
-		setInterval(function() {
+		setInterval(function() { //second counter for time
 			var now  = new Date();
 			var today = (now.getMonth()+1) + "-" + now.getDate() + "-" + now.getFullYear();
 			var time = now.toLocaleTimeString();
@@ -67,10 +67,15 @@
 				// changing color of h1 in html
 			}, 50);
 		}//function colour
-		var url = "view-source:https://github.com/CMooreCode/CMooreCode.github.io/blob/master/index.html";
-		$.ajax({ url: 'your-url', success: function(data) { alert(data); } });
-		//var urlText = document.getElementById(dateTime).innerHTML;
-		//document.write(urlText);
+		fuction gitUpdateTime(){
+			var respondObj = JSON.parse(this.responseText);
+			document.getElementById("git") = respondObj[0].updated_at;
+		}
+		var url = "https://api.github.com/users/CMooreCode/repos";
+		var updateRequest = new XMLHttpRequest();
+		updateRequest.onload = gitUpdateTime;
+		updateRequest.open('get', url);
+		updateRequest.send();
 		document.write("after urlText printing");
 	</script>
 </body>
