--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				// changing color of h1 in html
 			}, 50);
 		}//function colour
-		fuction gitUpdateTime(){
+		function gitUpdateTime(){
 			var respondObj = JSON.parse(this.responseText);
 			document.getElementById("git") = respondObj[0].updated_at;
 		}
