--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 			right: 10px;
 		}
 		#var {
-			position: static;
+			position: relative;
 		}
 		#let {
-			position: static;
+			position: relative;
 		}
 	</style>
 	<title>Tester</title>
