--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 	<p id="dating" style="font-size:80px;color:white"></p>
 	<button id="btn" onclick="colour()">Start</button>
 	<!-- executing function on button click -->
-
+	.git{
+		text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+	}
 	<script type="text/javascript">
 
 		var now  = new Date(); //init date
