--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 </head>
 
 <body>
-	.git{
+	<div class="thing">
+		This will be tested
+	</div>
+	.thing{
 		text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 	}
 	<h3 id="git" style="color:white"></h3> 
