--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<div class="thing">
 		This will be tested
 	</div>
-	.thing{
+	thing{
 		text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 	}
 	<h3 id="git" style="color:white"></h3> 
