--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
 	<p id="dating" style="font-size:80px;color:white"></p>
 	<button id="btn" onclick="colour()">Seizure</button>
 	<!-- executing function on button click -->
+	<script type="text/javascript">writeCalendar()</script>
 	<script type="text/javascript">
 
 		var now  = new Date(); //init date
