--- a/table/index.html
+++ b/table/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+	<script src="jquery-3.4.1.min.js"></script>
+	<script src="tableGetter.js"></script>
 </head>
 
 <body>
 	<h1> On the testing page </h1>
+	<p> pargraph thing</p>
+	<p> second thang </p>
+	<button>dissapear act</button>
 </body>
+
 </html>
