--- a/table/index.html
+++ b/table/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<script src="jquery-3.4.1.min.js"></script>
-	<script src="tableGetter.js"></script>
+	<script type="text/javascript" src="tableGetter.js"></script>
 </head>
 
 <body>
