--- a/table/index.html
+++ b/table/index.html
@@ -3,7 +3,14 @@
 
 <head>
 	<script src="jquery-3.4.1.min.js"></script>
-	<script type="text/javascript" src="tableGetter.js"></script>
+	<!-- <script type="text/javascript" src="tableGetter.js"></script> -->
+	<script>
+		$(document).ready(function() {
+			$("button").click(function(){
+				$("p").hide();
+			});
+		});
+	</script>
 </head>
 
 <body>
