--- a/table/index.html
+++ b/table/index.html
@@ -3,14 +3,15 @@
 
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<!-- <script type="text/javascript" src="tableGetter.js"></script> -->
-	<script>
+	<script type="text/javascript" src="tableGetter.js"></script> 	
+	<!-- <script>
 		$(document).ready(function() {
 			$("button").click(function(){
 				$("p").hide();
 			});
 		});
-	</script>
+	</script>-->
+
 </head>
 
 <body>
